--- a/processor/package.json
+++ b/processor/package.json
@@ -12,6 +12,7 @@
     "cbor": "^4.1.5",
     "crypto": "^1.0.1",
     "sawtooth-sdk": "^1.0.5",
+    "sqlite3": "^5.0.8",
     "text-encoding": "^0.6.4"
   }
 }
