--- a/sawtooth-default.yaml
+++ b/sawtooth-default.yaml
@@ -32,10 +32,12 @@ services:
       - "4004:4004"
     # start the validator with an empty genesis batch
     entrypoint: "bash -c \"\
+    if [ ! -f /etc/sawtooth/keys/validator.priv ]; then\
         sawadm keygen && \
         sawtooth keygen my_key && \
         sawset genesis -k /root/.sawtooth/keys/my_key.priv && \
         sawadm genesis config-genesis.batch && \
+        fi;\
         sawtooth-validator -vv \
           --endpoint tcp://validator:8800 \
           --bind component:tcp://eth0:4004 \
@@ -57,6 +59,8 @@ services:
     depends_on:
       - rest-api
     entrypoint: "bash -c \"\
-        sawtooth keygen && \
+        if [ ! -f /root/.sawtooth/keys/root.priv ]; then\
+          sawtooth keygen\
+        fi;\
         tail -f /dev/null \
         \""
