--- a/sawtooth-default.yaml
+++ b/sawtooth-default.yaml
@@ -9,20 +9,6 @@ services:
       - validator
     entrypoint: settings-tp -vv -C tcp://validator:4004
 
-  # intkey-tp-python:
-  #   image: hyperledger/sawtooth-intkey-tp-python:1.0
-  #   container_name: sawtooth-intkey-tp-python-default
-  #   depends_on:
-  #     - validator
-  #   entrypoint: intkey-tp-python -vv -C tcp://validator:4004
-
-  # xo-tp-python:
-  #   image: hyperledger/sawtooth-xo-tp-python:1.0
-  #   container_name: sawtooth-xo-tp-python-default
-  #   depends_on:
-  #     - validator
-  #   entrypoint: xo-tp-python -vv -C tcp://validator:4004
-
   validator:
     image: hyperledger/sawtooth-validator:1.0
     container_name: sawtooth-validator-default
@@ -31,19 +17,16 @@ services:
     ports:
       - "4004:4004"
     # start the validator with an empty genesis batch
-    entrypoint: |
-      bash -c "
-        if [ ! -f /etc/sawtooth/keys/validator.priv ]; then 
-          sawadm keygen && 
-          sawtooth keygen my_key && 
-          sawset genesis -k /root/.sawtooth/keys/my_key.priv && 
-          sawadm genesis config-genesis.batch 
-        fi;
+    entrypoint: "bash -c \"\
+        sawadm keygen --force  && \
+        sawtooth keygen my_key --force && \
+        sawset genesis -k /root/.sawtooth/keys/my_key.priv && \
+        sawadm genesis config-genesis.batch && \
         sawtooth-validator -vv \
           --endpoint tcp://validator:8800 \
           --bind component:tcp://eth0:4004 \
-          --bind network:tcp://eth0:8800
-      "
+          --bind network:tcp://eth0:8800 \
+      \""
 
   rest-api:
     image: hyperledger/sawtooth-rest-api:1.0
