--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "body-parser": "^1.20.0",
     "cbor": "^4.1.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "express": "^4.18.1",
     "request": "^2.88.0",
     "sawtooth-sdk": "^1.0.5",
     "sqlite3": "^5.0.8"
